4.1.11 - Not released
=====================

- #1408: Updated our Docker image to work with Kubernetes.
  Included sample helm charts (tested with minikube).
- #1373: Update installation instructions with `rsync`, and fix
  our `Dockerfile` adding `rsync` and `subversion`.

4.1.10 - Hotfix
===============
- Fixed an issue with the performance of the log retrieval.
 
4.1.9 - Zombies, splits, tests and bug fixes
=====================================
- Splits calendar: Added a complete example to the documentation.
- Splits calendar: Fixed some issues with the split=" auto."
- Added two regression tests to check the .cmd with the default parameters.
- Fixed the command inspect without the -f.
- Yet another fix for zombie processors.
- Fixed the describe command when a user disappears from the system. 
- Fixes an issue with dependency not being linked.
- Docs improved.


4.1.8 - Bug fixes.
==================
- Fixed an issue with a socket connection left open.
- Fixed an issue with log recovery being disabled by default.
- Added exclusive parameter
- Fixed some X11 routines called by default


4.1.7 - X11, Migrate, script and Bug fixes
==========================================
- Migrate added, a feature to change the ownership of the experiments (/scratch and autosubmit_data paths)
- X11 added ( If you have to use an older version, after using this one. Autosubmit will complain until you perform create -f and recovery)
- Multiple QoL and bug fixes for wrappers and fixed horizontal ones.
- Added a new parameter `SCRIPT` that allows to write templates in the yaml config.
- Fixed an issue with STAT file.
- Fixed all issues related to zombie processors. 

4.1.6 - Bug fixes
=====================
- Fixed issues with additional files and dates
- Fixed issues with calendar splits
- Fixed issues with log processors
- Fixed issues with expid regex on --copy
- Added Autosubmit stop command

4.1.5 - PJS - Fugaku - Support
=====================
- Added Fugaku support.