@@ -16,10 +16,6 @@ cache:
 
 prepare:
   stage: prepare
-  rules:
-    - changes:
-        - 'docker/**'
-      when: never
   script:
     - git submodule sync --recursive
     - git submodule update --init --recursive
@@ -30,10 +26,6 @@ prepare:
 
 test_python3:
   stage: test
-  rules:
-    - changes:
-        - 'docker/**'
-      when: never
   script:
     - conda activate autosubmit3
     - pytest
@@ -60,9 +52,5 @@ test_python3:
 
 clean:
   stage: clean
-  rules:
-    - changes:
-        - 'docker/**'
-      when: never
   script:
     - conda clean --all --yes
